      (Daniel Watkins, #64783)

    * Clearer message about how to set the PYTHONPATH if bzrlib can't be
      loaded. 
      (Martin Pool, #205230)

    * Errors about missing libraries are now shown without a traceback,
      and with a suggestion to install the library.  The full traceback is 
      still in ``.bzr.log`` and can be shown with ``-Derror``.
      (Martin Pool, #240161)

    * Handle urls such as ftp://user@host.com@www.host.com where the user
      name contains an @.
      (Neil Martinsen-Burrell, #228058)

    * ``needs_read_lock`` and ``needs_write_lock`` now suppress an error during
      ``unlock`` if there was an error in the original function. This helps
      most when there is a failure with a smart server action, since often the
      connection closes and we cannot unlock.
      (Andrew Bennetts, John Arbash Meinel, #125784)

    * Obsolete hidden command ``bzr fetch`` removed.
      (Martin Pool, #172870)

    * Raise the correct exception when doing ``-rbefore:0`` or ``-c0``.
      (John Arbash Meinel, #239933)

    * You can now compare file revisions in Windows diff programs from 
      Cygwin Bazaar.
      (Matt McClure, #209281)

    * revision_history now tolerates mainline ghosts for Branch format 6.
      (Aaron Bentley, #235055)

    * Set locale from environment for third party libs.
      (Martin von Gagern, #128496)

  DOCUMENTATION:

    * Updated developer documentation.
      (Martin Pool)

  TESTING:

   * ``-Dmemory`` will cause /proc/PID/status to be catted before bzr
     exits, allowing low-key analysis of peak memory use. (Robert Collins)

   * ``TestCaseWithTransport.make_branch_and_tree`` tries harder to return
     a tree with a ``branch`` attribute of the right format.  This was
     preventing some ``RemoteBranch`` tests from actually running with
     ``RemoteBranch`` instances.  (Andrew Bennetts)

  API CHANGES:

    * Removed ``Repository.text_store``, ``control_store``, etc.  Instead,